Use Java 17 features, remove deprecations, cleanup